Closed
Bug 24958
Opened 26 years ago
Closed 25 years ago
HTMLScriptElement.text does not return text
Categories
(Core :: DOM: Core & HTML, defect, P3)
Core
DOM: Core & HTML
Tracking
()
VERIFIED
FIXED
M16
People
(Reporter: ckritzer, Assigned: vidur)
References
()
Details
(Whiteboard: [nsbeta2+][6/01])
Attachments
(1 file)
|
569 bytes,
text/html
|
Details |
Overview Description: When attempting to read the HTMLScriptElement.text ("The
script content of the element") through the DOM, no text is returned
Steps to Reproduce:
1) Launch Linux6 (Commercial), MacOS86 (Commercial), or Win98 (Mozilla)
2000-01-24-01 build
2) Load http://voodoolady/dom1/hscr004.html automation testcase
3) Read results on screen
Actual Results: No text is returned
Expected Results: The string "//This space intentionally left blank" should be
returned
Build Date & Platform Bug Found:
- Linux6 2000-01-24-01 M13 Commercial build
- MacOS86 2000-01-24-01 M13 Commercial build
- WIn98 2000-01-24-01 M13 Mozilla build
Additional Builds and Platforms Tested On:
Additional Information: n/a @ this time
| Reporter | ||
Comment 1•26 years ago
|
||
| Reporter | ||
Comment 2•26 years ago
|
||
Changing Priority to P1 and Severity to critical...
Severity: major → critical
Priority: P3 → P1
| Assignee | ||
Comment 5•25 years ago
|
||
nsHTMLScriptElement::GetText/SetText need to look at the Text node that's a
child of the script element. Should be a simple fix. Marking for M16 since no
existing pages depend on it.
Severity: critical → normal
Priority: P1 → P3
Target Milestone: M16
| Reporter | ||
Comment 6•25 years ago
|
||
nominating for nsbeta2 based on:
- visibility
- feature (DOM Level 1 Standards Compliance) broken
Keywords: nsbeta2
Putting on [nsbeta2+][6/01] radar. This work must be done by 06/01 or we may
pull this for PR2.
Whiteboard: [nsbeta2+][6/01]
Comment 8•25 years ago
|
||
Fix checked in, marking FIXED.
Status: ASSIGNED → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
| Reporter | ||
Comment 9•25 years ago
|
||
Marking VERIFED FIXED on:
- MacOS9 2000-05-23-12-M16 Commercial Build
- Linux6 2000-05-23-10-M16 Commercial Build
- Win95 2000-05-23-10-M16 Commercial Build
Status: RESOLVED → VERIFIED
Comment 10•25 years ago
|
||
*** Bug 41546 has been marked as a duplicate of this bug. ***
Comment 11•19 years ago
|
||
RCS file: /cvsroot/mozilla/testing/mochitest/tests/test_bug24958.html,v
done
Checking in test_bug24958.html;
/cvsroot/mozilla/testing/mochitest/tests/test_bug24958.html,v <-- test_bug24958.html
initial revision: 1.1
done
Flags: in-testsuite+
Updated•6 years ago
|
Component: DOM → DOM: Core & HTML
You need to log in
before you can comment on or make changes to this bug.
Description
•