Fixing nsbeta2+ bug #24958, script.text never contained the actual script source, now it gets the script source from the textnodes inside the script element. r=vidur@netscape.com